<?xml version="1.0" encoding="utf-8"?>
<!--XML donde incluimos los elementos del splash-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    tools:context=".Splash">

    <!--Icono animado de la aplicación-->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="397dp"
        android:layout_height="385dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/todolist"
        tools:ignore="ImageContrastCheck" />
    <!--Icono de la desarrolladora de la aplicación-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="81dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_te"
        app:srcCompat="@mipmap/logopij_pink" />
    <!--Parte uno del título de la aplicación-->
    <TextView
        android:id="@+id/splash_cu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cute_notes"
        android:text="@string/cu"
        android:textColor="@color/blue_03"
        android:textSize="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
    <!--Parte dos del título de la aplicación-->
    <TextView
        android:id="@+id/splash_te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cute_notes"
        android:text="@string/te"
        android:textColor="@color/blue_02"
        android:textSize="52dp"
        app:layout_constraintStart_toEndOf="@+id/splash_cu"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
    <!--Parte tres del título de la aplicación-->
    <TextView
        android:id="@+id/splash_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cute_notes"
        android:text="@string/notes"
        android:textColor="@color/blue_01"
        android:textSize="48dp"
        app:layout_constraintStart_toEndOf="@+id/splash_te"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
    <!--Caja de texto que da paso al icono de la desarrolladora-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/vanilla"
        android:text="@string/made_by"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_te" />


</androidx.constraintlayout.widget.ConstraintLayout>